--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Jantje19",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "node-id3": "0.0.9"
   },
   "devDependencies": {},
   "repository": {
