--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Stream media",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "node main.js",
 		"start": "node index.js"
 	},
 	"keywords": [
