--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "Jantje19",
 	"license": "Apache-2.0",
 	"dependencies": {
+		"compression": "^1.7.1",
 		"express": "^4.14.0",
 		"fluent-ffmpeg": "^2.1.2",
 		"node-id3": "0.0.10",
