--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "Stream media",
 	"main": "index.js",
 	"scripts": {
-		"test": "node main.js",
-		"start": "node index.js"
+		"debug": "nodemon main.js",
+		"start": "node main.js",
+		"test": "node index.js"
 	},
 	"keywords": [
 		"music",
@@ -14,13 +15,15 @@
 	"author": "Jantje19",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"compression": "^1.7.1",
-		"express": "^4.14.0",
+		"compression": "^1.7.2",
+		"express": "^4.16.2",
 		"fluent-ffmpeg": "^2.1.2",
-		"node-id3": "0.0.10",
+		"node-id3": "^0.1.3",
 		"ytdl-core": "^0.14.4"
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"nodemon": "^1.17.1"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+ssh://git@github.com/Jantje19/MusicStream.git"
